# cs107-FinalProject

./: .coverage  .gitignore  .travis.yml  Dockerfile  LICENSE  README.md  coverage.xml  example.py  linearmodels.ipynb  requirements.txt  sample.py  setup.cfg  spladtool_reverse.py  spladtool_reverse_rye.py  test.py  test.sh  test_additional.py  test_basic_ops.py
doc/: milestone1.ipynb  milestone1.md  milestone2.ipynb  milestone2_progress.md  milestone2b.md
doc/.ipynb_checkpoints/: milestone1-checkpoint.ipynb
docs/: document.ipynb  milestone1.md.save
examples/: LogisticRegression2D.ipynb  classifier.py  iris.py  newton.py
rfsolver/: newton.py
spladtool/: __init__.py  functional.py  layer.py  main.py  spladtool_forward.py  spladtool_reverse.py  tensor.py
spladtool_forward/: __init__.py  functional.py  layer.py  tensor.py
spladtool_forward/lib/: layer.py  tensor.py
spladtool_forward/tests/: __init__.py  test.py  test_basic_ops.py  test_comp_ops.py
spladtool_reverse/: __init__.py  functional.py  layer.py  sample.py  spladtool_reverse.py  tensor_reverse.py
src/spladtool.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_analytical.py  test_backwards_func.py  test_basic_ops.py  test_basic_ops_reverse.py  test_comp_ops.py  test_comp_ops_reverse.py  test_functional.py  test_functional_reverse.py  test_optimize.py  test_others.py
