[metadata]
name = spladtool
version = 0.1.1
author = 'Raymond Jow, Rye Julson, Shihan Lin, Yuanbiao Wang'
author_email = rjow@college.harvard.edu
description = The Simple Pytorch-Like Auto Differentiation Toolkit is an automatic differentiation package for calculating gradients of a function in forward and reverse mode.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cs107-rysr/cs107-FinalProject
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src